# gateway-service

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/apps/: __init__.py  grpc_clients.py
src/apps/account/: __init__.py  router.py  schemas.py
src/apps/auth/: __init__.py  grpc_clients.py  router.py  schemas.py  service.py  utils.py
src/apps/booking/: __init__.py  router.py
src/apps/categories/: __init__.py  router.py
src/apps/halls/: __init__.py  router.py  shemas.py
src/apps/movie/: __init__.py  router.py  shemas.py
src/apps/payment/: __init__.py  router.py  shemas.py
src/apps/refund/: __init__.py  router.py  schemas.py
src/apps/screening/: __init__.py  router.py  schemas.py
src/apps/seats/: __init__.py  router.py  shemas.py
src/apps/shared/: schemas.py  service.py
src/apps/theaters/: __init__.py  router.py  shemas.py
src/apps/users/: __init__.py  router.py  shemas.py
src/core/: main.py  prometheus_metrics.py  schemas.py  service.py  tracing.py  utils.py
src/core/config/: __init__.py  authConfig.py  cookiesCongig.py  mediaConfig.py  movieConfig.py  passportConfig.py  paymentConfig.py  screeningConfig.py  settings.py  theaterConfig.py  usersConfig.py
src/core/grpc_clients/: __init__.py  account.py  auth.py  category.py  halls.py  media.py  movie.py  payment.py  refund.py  screening.py  seats.py  theaters.py  user.py
